# why-no-sound

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  output.rs  report.rs  runner.rs  types.rs
src/checks/: audio_stack.rs  bluetooth.rs  device_presence.rs  mod.rs  mute_state.rs  sink_inputs.rs  sink_validity.rs
